--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Libre+Franklin:400,400i,500,500i,700,700i,900,900i&display=swap"
+      rel="stylesheet"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,6 +15,38 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <script src="https://unpkg.com/pagedjs/dist/paged.polyfill.js"></script>
+    <script>
+      class RepeatingTableHeaders extends Paged.Handler {
+        constructor(chunker, polisher, caller) {
+          super(chunker, polisher, caller);
+        }
+
+        afterPageLayout(pageElement, page, breakToken, chunker) {
+          // Find all split table elements
+          let tables = pageElement.querySelectorAll("table[data-split-from]");
+
+          tables.forEach(table => {
+            // Get the reference UUID of the node
+            let ref = table.dataset.ref;
+            // Find the node in the original source
+            let sourceTable = chunker.source.querySelector(
+              "[data-ref='" + ref + "']"
+            );
+            // Find if there is a header
+            let header = sourceTable.querySelector("thead");
+            if (header) {
+              // Clone the header element
+              let clonedHeader = header.cloneNode(true);
+              // Insert the header at the start of the split table
+              table.insertBefore(clonedHeader, table.firstChild);
+            }
+          });
+        }
+      }
+
+      Paged.registerHandlers(RepeatingTableHeaders);
+    </script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,9 +63,11 @@
     -->
     <title>React App</title>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="root2"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
