Added newly built PagedJS version; will need to be added manually into PS

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <script src="https://unpkg.com/pagedjs/dist/paged.polyfill.js"></script>
+    <script src="%PUBLIC_URL%/paged.polyfill.js"></script>
     <script>
       class RepeatingTableHeaders extends Paged.Handler {
         constructor(chunker, polisher, caller) {
